# ModelTwo

./: .gitignore  AnimatedHistogram.py  AverageLengths.csv  CMakeLists.txt  Conglomerate.cpp  Conglomerate.h  ConnectedNeighbours.cpp  Connection.cpp  Distributions.py  FreeSite.cpp  Histogram.py  Images.py  LengthDist.csv  MakeArrayJob.sh  Makefile  Polymer.cpp  Polymer.h  System.cpp  System.h  Tests.cpp  Tests.h  UnconnectedNeighbours.h  inputList.csv  inputlist.csv  main.cpp  main.py  settings.h  source
dataAnalysis/: AnimatedHistogram.py  Distributions.py  Histogram.py
simulation/: Conglomerate.cpp  Conglomerate.h  ConnectedNeighbours.cpp  ConnectedNeighbours.h  Connection.cpp  Connection.h  FreeSite.h  Polymer.h  System.cpp  System.h  Tests.cpp  Tests.h  UnconnectedNeighbours.cpp  UnconnectedNeighbours.h  main.cpp  settings.cpp  settings.h
